--- a/css/style.css
+++ b/css/style.css
@@ -34,3 +34,41 @@ p {
 img {
     width: 100%;
 }
+
+.navbar {
+    background-color: #047aed;
+    color: #fff;
+    height: 70px;
+}
+
+.navbar ul {
+    display: flex;
+}
+
+.navbar a {
+    color: #fff;
+    padding: 10px;
+    margin: 0 10px;
+}
+
+.navbar a:hover {
+    border-bottom: 2px white solid;
+}
+
+.navbar .flex {
+    justify-content: space-between;
+}
+
+.container {
+    max-width: 1100px;
+    margin: 0 auto;
+    overflow: auto;
+    padding: 0 40px;
+}
+
+.flex {
+    display: flex;
+    justify-content: space-between; /* Partains to the main axis */
+    align-items: center; /* Partains to the cross axis */
+    height: 100%;
+}
