--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Montserrat&family=Roboto&display=swap');
 
+:root {
+    --primary-color: #047aed;
+}
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -35,8 +39,10 @@ img {
     width: 100%;
 }
 
+/* Navbar */
+
 .navbar {
-    background-color: #047aed;
+    background-color: var(--primary-color);
     color: #fff;
     height: 70px;
 }
@@ -59,6 +65,30 @@ img {
     justify-content: space-between;
 }
 
+/* Showcase */
+.showcase {
+    height: 400px;
+    background-color: var(--primary-color);
+    color: white;
+    position: relative;
+}
+
+.showcase .grid {
+    grid-template-columns: 55% 45%;
+    gap: 30px;
+}
+
+.showcase h1 {
+    font-size: 40px;
+    font-weight: 600;
+}
+
+.showcase p {
+    padding: 20px 0;
+}
+
+/* Utilities */
+
 .container {
     max-width: 1100px;
     margin: 0 auto;
@@ -72,3 +102,13 @@ img {
     align-items: center; /* Partains to the cross axis */
     height: 100%;
 }
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
