--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 
 :root {
     --primary-color: #047aed;
+    --border-bottom: #b4becb;
 }
 
 * {
@@ -74,6 +75,7 @@ img {
 }
 
 .showcase .grid {
+    overflow: visible;
     grid-template-columns: 55% 45%;
     gap: 30px;
 }
@@ -86,6 +88,48 @@ img {
 .showcase p {
     padding: 20px 0;
 }
+
+.showcase-form {
+    position: relative;
+    top: 60px;
+    height: 350px;
+    width: 400px;
+    padding: 40px;
+    z-index: 100;
+    justify-self: flex-end; /* Added for widescreen */
+}
+
+.showcase-form .form-control {
+    margin: 30px 0;
+}
+
+.showcase-form input[type="text"],
+.showcase-form input[type="email"] {
+    border: 0;
+    border-bottom: 1px solid var(--border-bottom);
+    width: 100%;
+    padding: 3px;
+    font-size: 16px;
+} 
+
+.showcase-form input:focus {
+    outline: none;
+}
+
+.showcase::before, .showcase::after {
+    content: '';
+    position: absolute;
+    height: 100px;
+    bottom: -70px;
+    right: 0;
+    left: 0;
+    background: white;
+    transform: skewY(-3deg);
+    -webkit-transform: skewY(-3deg);
+    -moz-transform: skewY(-3deg);
+    -ms-transform: skewY(-3deg);
+}
+
 
 /* Utilities */
 
@@ -103,6 +147,25 @@ img {
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
     padding: 20px;
     margin: 10px;
+}
+
+.btn {
+    display: inline-block;
+    padding: 10px 30px;
+    cursor: pointer;
+    background: var(--primary-color);
+    color: #fff;
+    border: none; 
+    border-radius: 5px;
+}
+
+.btn:hover {
+    transform: scale(.95);
+}
+
+.btn-outline {
+    background-color: transparent;
+    border: 1px solid #fff;
 }
 
 .flex {
