--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 :root {
     --primary-color: #047aed;
     --border-bottom: #b4becb;
+    --main-gray: rgb(128, 128, 128);
 }
 
 * {
@@ -131,56 +132,43 @@ img {
 }
 
 
-/* Utilities */
+/* Stats Style */
 
-.container {
-    max-width: 1100px;
+.stats {
+    padding-top: 100px;
+}
+
+.stats-heading {
+    max-width: 500px;
     margin: 0 auto;
-    overflow: auto;
-    padding: 0 40px;
+    color: var(--main-gray);
 }
 
-.card {
-    background-color: #fff;
-    color: #333;
-    border-radius: 10px;
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-    padding: 20px;
-    margin: 10px;
+.stats .grid i {
+    color: var(--primary-color);
 }
 
-.btn {
-    display: inline-block;
-    padding: 10px 30px;
-    cursor: pointer;
-    background: var(--primary-color);
-    color: #fff;
-    border: none; 
-    border-radius: 5px;
+.stats .grid h3 {
+    font-size: 28px;
+    color: var(--main-gray);
 }
 
-.btn:hover {
-    transform: scale(.95);
+.stats .grid p {
+    color: var(--primary-color);
+    font-size: 14px;
+    font-weight: bold;
 }
 
-.btn-outline {
-    background-color: transparent;
-    border: 1px solid #fff;
+
+/*  CLI Styles */
+
+.cli .grid {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
 }
 
-.flex {
-    display: flex;
-    justify-content: space-between; /* Partains to the main axis */
-    align-items: center; /* Partains to the cross axis */
-    height: 100%;
-}
-
-.grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+.cli .grid > *:first-child {
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 2;
 }
 
