--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
 
 :root {
     --primary-color: #047aed;
+    --secondary-color: #1c3fa8;
+    --light-color: rgb(231, 231, 231);
+    --dark-color: #002240;
     --border-bottom: #b4becb;
     --main-gray: rgb(128, 128, 128);
 }
@@ -81,10 +84,10 @@ img {
     gap: 30px;
 }
 
-.showcase h1 {
+/* .showcase h1 {
     font-size: 40px;
     font-weight: 600;
-}
+} */
 
 .showcase p {
     padding: 20px 0;
@@ -162,6 +165,10 @@ img {
 
 /*  CLI Styles */
 
+.cli {
+    background-color: var(--light-color);
+}
+
 .cli .grid {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -172,3 +179,32 @@ img {
     grid-row: 1 / span 2;
 }
 
+/* Cloud */
+
+.cloud .grid {
+    grid-template-columns: 4fr 3fr;
+    color: white;
+}
+
+/* Languages */
+
+.languages .flex {
+    flex-wrap: wrap;
+}
+
+.languages .card {
+    margin: 18px 10px 40px;
+    transition: transform 0.2s ease-in-out;
+}
+
+.languages .card h4 {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    margin-bottom: 10px;
+    color: var(--main-gray);
+}
+
+.languages .card:hover {
+    transform: translateY(-15px)
+}
