--- a/css/utilities.css
+++ b/css/utilities.css
@@ -61,6 +61,11 @@
     background-color: var(--light-color);
 }
 
+.bg-primary a, .btn-primary a,
+.bg-secondary a, .btn-secondary a,
+.bg-dark a , .btn-dark a {
+    color: white;
+}
 
 /* Text sizes */
 .lead {
