--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Montserrat&family=Roboto&display=swap');
 
 :root {
-    --primary-color: #047aed;
-    --secondary-color: #1c3fa8;
+    --primary-color: #c060a1;
+    --secondary-color: #6a097d;
     --light-color: rgb(231, 231, 231);
     --dark-color: #002240;
     --border-bottom: #b4becb;
     --main-gray: rgb(128, 128, 128);
+    --success-color: #5cb85c;
+    --error-color: #d9534f;
 }
 
 * {
@@ -44,6 +46,12 @@ img {
     width: 100%;
 }
 
+code, pre {
+    background-color: #333;
+    color: white;
+    padding: 10px;
+}
+
 /* Navbar */
 
 .navbar {
@@ -60,6 +68,10 @@ img {
     color: #fff;
     padding: 10px;
     margin: 0 10px;
+}
+
+.navbar a.active {
+    border-bottom: 2px white solid;
 }
 
 .navbar a:hover {
@@ -93,6 +105,10 @@ img {
     padding: 20px 0;
 }
 
+.showcase-text {
+    animation: slideInFromLeft 1s ease-in;
+}
+
 .showcase-form {
     position: relative;
     top: 60px;
@@ -101,6 +117,7 @@ img {
     padding: 40px;
     z-index: 100;
     justify-self: flex-end; /* Added for widescreen */
+    animation: slideInFromRight 1s ease-in;
 }
 
 .showcase-form .form-control {
@@ -139,6 +156,7 @@ img {
 
 .stats {
     padding-top: 100px;
+    animation: slideInFromBottom 2s ease-in;
 }
 
 .stats-heading {
@@ -167,6 +185,7 @@ img {
 
 .cli {
     background-color: var(--light-color);
+    animation: slideInFromBottom 1s ease-in;
 }
 
 .cli .grid {
@@ -187,6 +206,9 @@ img {
 }
 
 /* Languages */
+.languages {
+    animation: slideInFromBottom 1s ease-in;
+}
 
 .languages .flex {
     flex-wrap: wrap;
@@ -209,10 +231,108 @@ img {
     transform: translateY(-15px)
 }
 
+/* Features */
+
+.features-head img,
+.docs-head img {
+    width: 200px;
+    justify-self: flex-end;
+}
+
+/* Features Subhead */
+.features-sub-head img {
+    width: 300px;
+    justify-self: flex-end;
+}
+
+.features-main .card > i {
+    margin-right: 20px;
+}
+
+.features-main .grid {
+    padding: 30px;
+}
+
+.features-main .grid > *:first-child {
+    grid-column: 1 / span 3;
+}
+
+.features-main .grid > *:nth-child(2) {
+    grid-column: 1 / span 2;
+}
+
+/* Docs */
+.docs-main h3 {
+    margin: 20px 0
+}
+
+.docs-main .grid {
+    grid-template-columns: 1fr 2fr;
+    align-items: flex-start
+}
+
+.docs-main nav li {
+    font-size: 17px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    border-bottom: 1px #ccc solid;
+}
+
+.docs-main a:hover {
+    font-weight: bold;
+}
+
+
 /* Footer */
 
 .socials a {
     margin: 10px;
+}
+
+
+/* Animations */
+/* SlideInFromLeft */
+@keyframes slideInFromLeft {
+    0% {
+        transform: translateX(-100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+/* SlideInFromRight */
+@keyframes slideInFromRight {
+    0% {
+        transform: translateX(100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+/* SlideInFromTop */
+@keyframes slideInFromTop {
+    0% {
+        transform: translateY(-100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+/* SlideInFromBottom */
+@keyframes slideInFromBottom {
+    0% {
+        transform: translateY(100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
 }
 
 /* Media Queries */
@@ -223,7 +343,12 @@ img {
     .showcase .grid,
     .stats .grid,
     .cli .grid, 
-    .cloud .grid {
+    .cloud .grid,
+    .features-head .grid,
+    .features-sub-head .grid,
+    .features-main .grid,
+    .docs-head .grid,
+    .docs-main .grid {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
     }
@@ -235,16 +360,42 @@ img {
     .showcase-text {
         margin-top: 40px;
         text-align: center;
+        animation: slideInFromTop 1s ease-in;
     }
 
     .showcase-form {
         justify-self: center;
         margin: auto;
+        animation: slideInFromBottom 1s ease-in;
     }
 
     .cli .grid > *:first-child {
         grid-column: 1;
         grid-row: 1;
+    }
+
+    .features-head,
+    .features-sub-head,
+    .docs-head {
+        text-align: center;
+    }
+
+    .features-head img,
+    .features-sub-head img,
+    .docs-head img {
+        justify-self: center;
+    }
+
+    .features-main .grid > *:first-child {
+        grid-column: 1;
+    }
+    
+    .features-main .grid > *:nth-child(2) {
+        grid-column: 1;
+    }
+
+    .alert {
+        width: 100%;
     }
 }
 
@@ -263,4 +414,5 @@ img {
         background-color: rgba(0, 0, 0, .2);
         border-radius: 20px;
     }
+    
 }
